Fix change where text overlaped the image

--- a/style.css
+++ b/style.css
@@ -5,3 +5,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#imgGif {
+    width: 750px;
+    height: 500px;
+
+}
+
+
+
